--- a/res/style.css
+++ b/res/style.css
@@ -52,20 +52,20 @@ i {
 
 #thisCardIs h2 span:nth-of-type(1),
 #thisCardIs h2 span:nth-of-type(2),
-#thisCardIs p:first-of-type,
-#thisCardIs p:first-of-type label span:nth-of-type(2),
+#thisCardIs span.isOnly,
+#thisCardIs span.isOnly label span:nth-of-type(2),
 #isReplaced,
 label[for=isReplaced] {
     display: none;
 }
 
-#thisCardIs.plural p:nth-of-type(1) label span:nth-of-type(1),
+#thisCardIs.plural span.isOnly label span:nth-of-type(1),
 #thisCardIs.plural h2 span:nth-of-type(1) {
     display: none !important;
 }
 
 #thisCardIs.plural h2 span:nth-of-type(2),
-#thisCardIs.plural p:nth-of-type(1) label span:nth-of-type(2) {
+#thisCardIs.plural span.isOnly label span:nth-of-type(2) {
     display: initial;
 }
 
