--- a/res/style.css
+++ b/res/style.css
@@ -59,8 +59,8 @@ label.replaced {
     display: none;
 }
 
-#thisCardIs.plural p:first-of-type label span:nth-of-type(1),
-#thisCardIs.plural h2 span:nth-of-type(1) {
+#thisCardIs.plural h2 span:nth-of-type(1),
+#thisCardIs.plural p:first-of-type label span:nth-of-type(1) {
     display: none !important;
 }
 
